--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,5 +31,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MODMAVEN_USER: ${{ secrets.MODMAVEN_USER }}
           MODMAVEN_PASSWORD: ${{ secrets.MODMAVEN_PASSWORD }}
+          SHENDAI_REPOSLITE_USER: ${{ secrets.SHENDAI_REPOSLITE_USER }}
+          SHENDAI_REPOSLITE_PASSWORD: ${{ secrets.SHENDAI_REPOSLITE_PASSWORD }}
           CURSEFORGE_KEY: ${{ secrets.CURSEFORGE_KEY }}
         run: ./gradlew publish curseforge -Ptag_version=${{ steps.get_tag_version.outputs.TAG_VERSION }} --info --stacktrace
