--- a/gradle.properties
+++ b/gradle.properties
@@ -7,12 +7,12 @@ mixins_version=0.8.5
 sonar_version=3.3+
 curse_release_type=beta
 
-elementalcraft_version=1.18-2-4.2.0
+elementalcraft_version=1.18-2-4.2.1b
 
 # mod dependencies
 jei_version=1.18.2:9.5.5.174
 patchouli_version=1.18.2-66
-dpanvil_version=1.18.2-3.3.0
+dpanvil_version=1.18.2-3.3.2c
 
 # mod interactions
 mekanism_version=1.16.3-10.0.15.441
