--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ configurations {
     datagenCompile.extendsFrom(compile)
     datagenImplementation.extendsFrom(implementation)
     datagenCompileOnly.extendsFrom(compileOnly)
+    datagenRuntimeOnly.extendsFrom(runtimeOnly)
 }
 
 minecraft {
@@ -186,7 +187,7 @@ dependencies {
     }
 
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
-    //runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
     
     implementation fg.deobf("mezz.jei:jei-${jei_version}")
     
@@ -197,6 +198,8 @@ dependencies {
     datagenImplementation sourceSets.api.output
     datagenImplementation sourceSets.main.output
     datagenImplementation fg.deobf("mekanism:Mekanism:${mekanism_version}:tools")
+    datagenImplementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+    datagenImplementation fg.deobf("vazkii.botania:Botania:${botania_version}")
     datagenImplementation fg.deobf("net.silentchaos512:silent-gear:${silentgear_version}") {
         exclude module: 'forge'
         exclude module: 'jei-1.18.2'
