--- a/gradle.properties
+++ b/gradle.properties
@@ -7,15 +7,17 @@ mixins_version=0.8.5
 sonar_version=3.3+
 curse_release_type=release
 
-elementalcraft_version=1.18-2-4.3.4
+elementalcraft_version=1.18-2-4.3.5
 # mod dependencies
 jei_version=1.18.2:9.7.0.193
-patchouli_version=1.18.2-66
+patchouli_version=1.18.2-67
 dpanvil_version=1.18.2-3.3.2c
 
 # mod interactions
 mekanism_version=1.18.2-10.2.0.459
 
 # datagen dependencies
+curios_version=1.18.2-5.0.7.0
+botania_version=1.18.2-431
 silentgear_version=1.18.2-2.10.0
 silentlib_version=1.18.2-6.2.0
