--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,6 @@ buildscript {
     repositories {
 		mavenLocal()
     	mavenCentral()
-        maven { url = 'https://maven.minecraftforge.net/' }
-        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
-        maven { url = 'https://maven.parchmentmc.org' }
         maven { url = 'https://reposilite.shendai.rip/public' }
     }
     dependencies {
@@ -189,14 +186,15 @@ dependencies {
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
     
-    implementation fg.deobf("mezz.jei:jei-${jei_version}")
-    
     // mod interactions
-    implementation fg.deobf("mekanism:Mekanism:${mekanism_version}")
+    implementation fg.deobf("mezz.jei:jei-${jei_version}")
+
+    compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
     
     // datagen
     datagenImplementation sourceSets.api.output
     datagenImplementation sourceSets.main.output
+    datagenImplementation fg.deobf("mekanism:Mekanism:${mekanism_version}")
     datagenImplementation fg.deobf("mekanism:Mekanism:${mekanism_version}:tools")
     datagenImplementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
     datagenImplementation fg.deobf("vazkii.botania:Botania:${botania_version}")
