--- a/build.gradle
+++ b/build.gradle
@@ -190,6 +190,11 @@ dependencies {
     implementation fg.deobf("mezz.jei:jei-${jei_version}")
 
     compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
+
+    // runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+
+    compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}:api")
+    // runtimeOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
     
     // datagen
     datagenImplementation sourceSets.api.output
