--- a/gradle.properties
+++ b/gradle.properties
@@ -7,11 +7,11 @@ mixins_version=0.8.5
 sonar_version=3.3+
 release_type=release
 
-elementalcraft_version=1.18-2-4.4.3
+elementalcraft_version=1.18-2-4.4.3b
 
 # mod dependencies
 patchouli_version=1.18.2-67
-dpanvil_version=1.18.2-3.4.0
+dpanvil_version=1.18.2-3.4.0c
 
 # mod interactions
 jei_version=1.18.2:9.7.0.193
