--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ plugins {
 	id 'maven-publish'
 	id "org.sonarqube" version "${sonar_version}"
 	id "com.matthewprenger.cursegradle" version '1.4.+'
+    id "com.modrinth.minotaur" version "2.+"
 }
 
 apply plugin: 'net.minecraftforge.gradle'
