--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 minecraft_version=1.18.2
 mappings_channel=parchment
 mappings_version=2022.05.22-1.18.2
-forge_version=1.18.2-40.1.0
+forge_version=1.18.2-40.1.30
 mixins_version=0.8.5
 
 sonar_version=3.3+
 release_type=release
 
-elementalcraft_version=1.18-2-4.4.3c
+elementalcraft_version=1.18-2-4.4.4
 
 # mod dependencies
 patchouli_version=1.18.2-67
