--- a/gradle.properties
+++ b/gradle.properties
@@ -7,14 +7,14 @@ mixins_version=0.8.5
 sonar_version=3.3+
 release_type=release
 
-elementalcraft_version=1.18-2-4.4.5b
+elementalcraft_version=1.18-2-4.4.6
 
 # mod dependencies
 patchouli_version=1.18.2-67
 dpanvil_version=1.18.2-3.4.0c
 
 # mod interactions
-jei_version=1.18.2:9.7.0.193
+jei_version=1.18.2:9.7.0.195
 mekanism_version=1.18.2-10.2.0.459
 curios_version=1.18.2-5.0.7.0
 botania_version=1.18.2-431
