--- a/build.gradle
+++ b/build.gradle
@@ -192,6 +192,7 @@ dependencies {
 
     compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
 
+    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
     // runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
 
     compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}:api")
