--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ mixins_version=0.8.5
 sonar_version=3.3+
 release_type=alpha
 
-elementalcraft_version=1.19-5.1.0
+elementalcraft_version=1.19-5.1.0b
 
 # mod dependencies
 patchouli_version=1.19-75
