--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,25 @@
-minecraft_version=1.19
+minecraft_version=1.19.1
 #mappings_channel=parchment
 #mappings_version=2022.06.05-1.18.2
 mappings_channel=official
-mappings_version=1.19
-forge_version=1.19-41.1.0
+mappings_version=1.19.1
+forge_version=1.19.1-42.0.2
 mixins_version=0.8.5
 
 sonar_version=3.3+
 release_type=alpha
 
-elementalcraft_version=1.19-5.1.0b
+elementalcraft_version=1.19.1-5.2.0
 
 # mod dependencies
 patchouli_version=1.19-75
-dpanvil_version=1.19-4.1.0
+dpanvil_version=1.19.1-4.2.0
 
 # mod interactions
-jei_version_prefix=1.19-forge
-jei_version=11.1.1.236
-mekanism_version=1.19-10.3.0.467
-curios_version=1.19-5.1.0.4
+jei_version_prefix=1.19.1-forge
+jei_version=11.2.0.241
+mekanism_version=1.19.1-10.3.1.468
+curios_version=1.19.1-5.1.0.5
 botania_version=1.18.2-431
 
 # datagen dependencies
