--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ sonar_version=3.3+
 release_type=alpha
 release_versions=1.19.1,1.19.2
 
-elementalcraft_version=1.19.1-5.2.1
+elementalcraft_version=1.19.1-5.2.1b
 
 # mod dependencies
 patchouli_version=1.19-75
