--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,26 @@
-minecraft_version=1.19.1
-#mappings_channel=parchment
-#mappings_version=2022.06.05-1.18.2
-mappings_channel=official
-mappings_version=1.19.1
-forge_version=1.19.1-42.0.8
+minecraft_version=1.19.2
+mappings_channel=parchment
+mappings_version=2022.08.10-1.19.2
+#mappings_channel=official
+#mappings_version=1.19.2
+forge_version=1.19.2-43.0.7
 mixins_version=0.8.5
 
 sonar_version=3.3+
-release_type=alpha
-release_versions=1.19.1,1.19.2
+release_type=beta
+release_versions=1.19.2
 
-elementalcraft_version=1.19.1-5.2.1b
+elementalcraft_version=1.19.2-5.3.0
 
 # mod dependencies
 patchouli_version=1.19-75
-dpanvil_version=1.19.1-4.2.0
+dpanvil_version=1.19.2-4.3.0
 
 # mod interactions
-jei_version_prefix=1.19.1-forge
-jei_version=11.2.0.244
+jei_version_prefix=1.19.2-forge
+jei_version=11.2.0.246
 mekanism_version=1.19.1-10.3.1.468
-curios_version=1.19.1-5.1.0.5
+curios_version=1.19.2-5.1.1.0
 botania_version=1.18.2-431
 
 # datagen dependencies
