--- a/gradle.properties
+++ b/gradle.properties
@@ -10,11 +10,11 @@ sonar_version=3.3+
 release_type=beta
 release_versions=1.19.2
 
-elementalcraft_version=1.19.2-5.3.0
+elementalcraft_version=1.19.2-5.3.0b
 
 # mod dependencies
 patchouli_version=1.19-75
-dpanvil_version=1.19.2-4.3.0
+dpanvil_version=1.19.1-4.2.0
 
 # mod interactions
 jei_version_prefix=1.19.2-forge
