--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,10 @@ forge_version=1.19.2-43.1.2
 mixins_version=0.8.5
 
 sonar_version=3.3+
-release_type=beta
+release_type=release
 release_versions=1.19.2
 
-elementalcraft_version=1.19.2-5.3.3
+elementalcraft_version=1.19.2-5.3.4
 
 # mod dependencies
 patchouli_version=1.19-75
