--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -15,3 +15,4 @@ public net.minecraft.world.entity.LivingEntity f_20922_ # attackStrengthTicker
 public net.minecraft.world.entity.projectile.AbstractArrow f_36703_ # inGround
 public net.minecraft.data.loot.BlockLoot f_124070_ # map
 public net.minecraft.world.item.context.DirectionalPlaceContext f_43648_ # direction
+public net.minecraft.client.renderer.ItemInHandRenderer m_109371_(Lnet/minecraft/client/player/AbstractClientPlayer;FFLnet/minecraft/world/InteractionHand;FLnet/minecraft/world/item/ItemStack;FLcom/mojang/blaze3d/vertex/PoseStack;Lnet/minecraft/client/renderer/MultiBufferSource;I)V # renderArmWithItem
