--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 minecraft_version=1.19.2
 mappings_channel=parchment
-mappings_version=2022.09.18-1.19.2
+mappings_version=2022.11.27-1.19.2
 #mappings_channel=official
 #mappings_version=1.19.2
 forge_version=1.19.2-43.2.3
@@ -10,10 +10,10 @@ sonar_version=3.4+
 release_type=release
 release_versions=1.19.2
 
-elementalcraft_version=1.19.2-5.5.8
+elementalcraft_version=1.19.2-5.5.9
 
 # mod dependencies
-patchouli_version=1.19-75
+patchouli_version=1.19.2-77
 dpanvil_version=1.19.2-4.3.1
 
 # mod interactions
@@ -22,7 +22,7 @@ jei_version=11.2.0.246
 mekanism_version=1.19.1-10.3.1.468
 immersive_engineering_version=1.19.2-9.0.0-153
 curios_version=1.19.2-5.1.1.0
-botania_version=1.19.2-436-SNAPSHOT
+botania_version=1.19.2-436-FORGE
 
 # datagen dependencies
 silentgear_version=1.19.2-3.0.2
