--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ sonar_version=4.4+
 release_type=release
 release_versions=1.20.1
 
-elementalcraft_version=1.20.1-6.0.0
+elementalcraft_version=1.20.1-6.0.0b
 
 # mod dependencies
 patchouli_version=1.20.1-81-FORGE
