--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
     id 'net.neoforged.gradle.userdev' version "${neogradle_version}"
 
     id "org.sonarqube" version "${sonar_version}"
-    id 'net.darkhax.curseforgegradle' version '1.1.16'
+    id 'net.darkhax.curseforgegradle' version '1.1.+'
     id "com.modrinth.minotaur" version "2.+"
 }
 
