--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
     id "com.modrinth.minotaur" version "2.+"
 }
 
-version = project.hasProperty('tag_version') ? "${minecraft_version}-${tag_version}" : "${elementalcraft_version}"
+version = project.hasProperty('tag_version') ? "${tag_version}" : "${elementalcraft_version}"
 group = 'sirttas.elementalcraft'
 
 repositories {
