--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ org.gradle.jvmargs=-Xmx3g
 
 minecraft_version=1.20.4
 minecraft_version_range=[1.20.4,1.21)
-neo_version=20.4.173
-neo_version_range=[20.4.173,)
+neo_version=20.4.195
+neo_version_range=[20.4.195,)
 neogradle_version=7.0.+
 loader_version_range=[2,)
 pack_format_number=18
@@ -19,23 +19,23 @@ sonar_version=4.4+
 release_type=alpha
 release_versions=1.20.4
 
-elementalcraft_version=1.20.4-6.1.2
+elementalcraft_version=6.1.3
 
 # mod dependencies
 patchouli_version=1.20.4-85-NEOFORGE-SNAPSHOT
 patchouli_version_range=[1.20.4-85-NEOFORGE-SNAPSHOT,)
-dpanvil_version=1.20.4-5.1.1
-dpanvil_version_range=[1.20.4-5.1.1,1.20.4-5.2.0)
+dpanvil_version=5.1.2
+dpanvil_version_range=[5.1.2,5.2.0)
 
 # mod interactions
 jei_version_prefix=1.20.4-neoforge
 jei_version=17.3.0.47
 jei_version_range=[17.3.0.47,)
-mekanism_version=1.20.4-10.5.0.22
-mekanism_version_range=[1.20.4-10.5.0.22,)
-immersive_engineering_version=1.20.4-10.0.1-pre.174:unsigned
-curios_version=7.3.1+1.20.4
-curios_version_range=[7.3.1+1.20.4,)
+mekanism_version=1.20.4-10.5.2.24
+mekanism_version_range=[1.20.4-10.5.2.24,)
+immersive_engineering_version=1.20.4-10.0.1-pre.189
+curios_version=7.3.2+1.20.4
+curios_version_range=[7.3.2+1.20.4,)
 botania_version=1.20.1-441-FORGE-SNAPSHOT
 
 # test dependencies
